# bit-flippers

./: .gitignore  COMPLETED_ROADMAP.md  README.md  ROADMAP.md  pyproject.toml  savegame.json  savegame_0.json
assets/: strings.json
assets/maps/: bit-flippers.tiled-project  bit-flippers.tiled-session  comm_tower.tmx  core_nexus.tmx  data_vault.tmx  iron_shell.tmx  overworld.tmx  reactor_core.tmx  scrap_cave.tmx  scrap_factory.tmx  slag_pits.tmx  tinker_shop.tmx  volt_forge.tmx
assets/maps/tilesets/: basechip.tsx  dithart_alien_spaceship.tsx  dithart_dark_organic.tsx  dithart_scifi_01.tsx  dithart_scifi_02.tsx  dithart_scifi_dungeon.tsx  dithart_scifi_items.tsx  grass_autotile.tsx  water_static.tsx
assets/sprites/dithart/Ditharts_SciFi_Character_Pack_v0.8/: CHANGE_LOG.txt
docs/: map-design-guide.md
src/bit_flippers/: audio.py  camera.py  combat.py  combat_actions.py  encounter.py  events.py  fonts.py  generate_assets.py  interaction.py  items.py  main.py  maps.py  minimap.py  npc.py  particles.py  player_stats.py  quests.py  save.py  settings.py  skills.py  sprites.py  status_effects.py  strings.py  tiled_loader.py  tilemap.py  validation.py
src/bit_flippers/states/: about_screen.py  character.py  character_select.py  combat.py  combat_renderer.py  death_screen.py  dialogue.py  inventory.py  level_up.py  options_menu.py  overworld.py  overworld_hud.py  pause_menu.py  quest_log.py  save_menu.py  shop.py  skill_tree.py  title_screen.py  transition.py
tools/: generate_assets.py  generate_interior_tmx.py  generate_overworld_tmx.py  generate_tinker_shop_tmx.py
(+21 files in other folders)
